--- a/src/components/BackgroundVideo.css
+++ b/src/components/BackgroundVideo.css
@@ -1,7 +1,8 @@
 .BackgroundVideo-section {
   position: relative;
   overflow: hidden;
-  height: 40rem;
+  /* height: 40rem; */
+  height: 100vh;
 }
 .BackgroundVideo {
   display: block;
