--- a/src/components/PostSection.css
+++ b/src/components/PostSection.css
@@ -12,6 +12,7 @@
   margin-top: 1rem;
   margin-top: 5rem;
   background: white;
+  /* background: var(--odronataDark); */
   border: 2px solid black;
   padding: 1rem 2rem;
   cursor: pointer;
