--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -1,11 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
+
 :root {
-  --primary: #00c2bd;
-  --secondary: #000;
+  --primary: #FF8000;
+  --secondary: #FF8000;
   --lightGrey: whitesmoke;
+  --odronataDark: #16161D;
+  --odronataLight: #E9E9E2;
+  --odronataWrite: whitesmoke;
   --midGrey: #cacaca;
   --darkGrey: #272727;
   --danger: #ff3d3d;
-  --font-primary: 'Open Sans', sans-serif;
+  /* --font-primary: 'Open Sans', sans-serif; */
+  --font-primary: 'Comfortaa', cursive;
   --font-system: system-ui; /* postcssPresetEnv */
   --borderRadius: 3px;
 }
@@ -34,11 +40,12 @@ html {
 }
 
 body {
-  font-family: var(--font-system);
+  /* font-family: var(--font-system); */
+  font-family: var(--font-primary);
   min-height: 100%;
   position: relative;
-  background: white;
-  color: var(--secondary);
+  background: #16161D;
+  color: var(--odronataWrite);
   font-size: 1.6em;
   font-weight: 400;
   letter-spacing: 0.01em;
