--- a/src/templates/SinglePost.css
+++ b/src/templates/SinglePost.css
@@ -1,5 +1,6 @@
 .SinglePost {
-  background: var(--lightGrey);
+  /* background: var(--lightGrey); */
+  background: var(--odronataDark);
 }
 
 .SinglePost--BackButton {
@@ -24,7 +25,8 @@
 }
 
 .SinglePost--Content {
-  background: white;
+  /* background: white; */
+  background: var(--odronataDark);
   padding: 8rem 8rem 4rem 8rem;
 }
 
