--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -194,6 +194,7 @@ blockquote {
   max-width: 1111px;
   width: 90%;
   margin: 0 auto;
+  /* height: 100vh; */
 }
 .container.skinny {
   max-width: 888px;
@@ -239,4 +240,16 @@ blockquote {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.Work {
+  margin-top: 50vh; /* poussé de la moitié de hauteur de viewport */
+  transform: translateY(-50%); /* tiré de la moitié de sa propre hauteur */
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.Work2 {
+  margin-top: 80px;
 }
