--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -162,7 +162,7 @@ blockquote {
 .section {
   width: 100%;
   padding: 5rem 0;
-  border-bottom: 1px solid #f1f1f1;
+  /* border-bottom: 1px solid #f1f1f1; */
 }
 .section:last-child {
   border: 0;
