--- a/src/templates/ContactPage.css
+++ b/src/templates/ContactPage.css
@@ -8,7 +8,7 @@
 .Contact--Details--Item {
   display: flex;
   padding: 2rem 0;
-  border-top: 1px solid var(--lightGrey);
+  /* border-bottom: 1px solid var(--lightGrey); */
   font-weight: 500;
   text-decoration: none;
   color: inherit;
