--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -37,6 +37,8 @@ html {
   font-size: 62.5%;
   min-height: 100%;
   background: var(--lightGrey);
+  overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
