--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -4,7 +4,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  border-bottom: 1px solid var(--lightGrey);
+  /* border-bottom: 1px solid var(--lightGrey); */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.025);
 }
 
