--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -274,3 +274,165 @@ blockquote {
   font-size: 2rem;
 }
 
+.legislationTitle {
+  width: 100%;
+  font-size: 1.8em;
+}
+
+
+.legislationFlexi{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.legislationPave1 {
+  width: 50%;
+  padding: 10px;
+}
+
+.legislationPave2 {
+  width: 40%;
+  height: 500px;
+  margin: 0 20px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.demo {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 10;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #fff;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.demo :hover {
+  opacity: .5;
+}
+
+@-webkit-keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+#section09 {
+  padding-top: 40px;
+}
+#section09 span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 30px;
+  height: 50px;
+  margin-left: -15px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  box-sizing: border-box;
+}
+#section09 span::before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  box-sizing: border-box;
+}
+#section09 span::after {
+  position: absolute;
+  bottom: -18px;
+  left: 50%;
+  width: 18px;
+  height: 18px;
+  content: '';
+  margin-left: -9px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
+  .legislationPave1 {
+    width: 100%;
+    /* font-size: 0.6em; */
+  }
+  .legislationPave2 {
+    width: 100%;
+    height: 550px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .legislationPave1 {
+    width: 100%;
+    /* font-size: 0.6em; */
+  }
+  .legislationPave2 {
+    width: 100%;
+    height: 450px;
+  }
+}
+
+@media screen and (min-width: 512px) and (max-width: 767px) {
+  .legislationPave1 {
+    width: 100%;
+    /* font-size: 0.6em; */
+  }
+  .legislationPave2 {
+    width: 100%;
+    height: 300px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 511px) {
+  .legislationPave1 {
+    width: 100%;
+    /* font-size: 0.4em; */
+  }
+  .legislationPave2 {
+    width: 100%;
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .legislationPave1 {
+    width: 100%;
+    /* font-size: 0.4em; */
+  }
+  .legislationPave2 {
+    width: 100%;
+    height: 150px;
+  }
+}
